refactor(java): :recycle: Optimize imports and improve code formatting